--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 body {
     font-family: 'Montserrat', sans-serif;
-    font-weight: inherit;
     background-color: #f0f0f0;
 }
 
@@ -11,6 +10,14 @@ main {
     width: 1200px;
     margin: 40px auto;
     box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.2);
+}
+
+section{
+    padding-bottom: 50px;
+}
+
+header {
+    margin: 50px;
 }
 
 header h2{
@@ -29,4 +36,28 @@ h2 {
 .sidebar{
     background-color: #595972;
     color: white;
+}
+
+.sidebar-header, .main-header {
+    width: 100%;
+    height: 30px;
+    text-align: center;
+}
+
+.main-header{
+    background-color: #EDEDED;
+}
+
+.sidebar-header {
+    background-color: #353548;
+}
+
+.contacts {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.mail, .tel{
+    text-decoration: none;
+    color: #fff;
 }
