--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,8 @@ section{
 }
 
 header {
-    margin: 50px;
+    margin-left: 50px;
+    margin-bottom: 70px;
 }
 
 header h2{
@@ -64,4 +65,16 @@ h2 {
 
 .skills li{
     margin-bottom: 10px;
+}
+
+.footer {
+    display: flex;
+    flex-direction: row;
+    padding: 20px 60px 20px 60px;
+    background-color: #EDEDED;
+}
+
+.copyright{
+    margin-left: auto;
+    margin-right: auto;
 }
