--- a/css/style.css
+++ b/css/style.css
@@ -208,10 +208,6 @@ h2 {
 .project-list {
     list-style-type: none;
 }
-.project-card-1 {
-    background-image: url(img/drag-n-drop.png);
-
-}
 
 .project-list a{
     text-decoration: none;
@@ -248,5 +244,54 @@ h2 {
 .code-example h2 {
     text-align: center;
 }
+
+.footer {
+    position: absolute;
+    width: 100%;
+    background: #353548;
+    margin-top: 50px;
+    padding: 20px 70px;
+}
+
+.footer-contacts h3{
+    font-weight: 200;
+    font-size: 22px;
+    line-height: 24px;
+    text-align: center;
+}
+
+.contact-list, .task-list {
+    list-style: none;
+    text-align: center;
+}
+
+.contact-point, .task-point {
+    display: inline-block;
+}
+
+.contact-point a {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 29px;
+    text-decoration: none;
+    color: #fff;
+    position: relative;
+    margin: 0 80px;
+    display: inline-block;
+}
+
+.right {
+    position: absolute;
+    right: 100px;
+}
+
+.left {
+    position: absolute;
+    left: 100px;
+}
+
+
+
+
 
 
